# product-migration

./: .env.sample  .env.test  .gitignore  Makefile  Pipfile  README.md  app.py  main.py  mapping.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
classes/: Api.py  OpenProject.py  Plane.py  api.py  openproject.py  plane.py
sources/classes/: api.py  openproject.py  plane.py
sources/models/: mapping.py  openproject.py  plane.py
sources/utilities/: display.py  files.py  logs.py
tests/classes/: api_test.py  openproject_test.py  plane_test.py
tests/models/: mapping_test.py  openproject_test.py  plane_test.py
tests/samples/: openproject_projects.json  openproject_users.json  openproject_workpackages.json  plane_issues.json  plane_members.json  plane_projects.json
tests/utilities/: display_test.py  files_test.py  logs_test.py
utilities/: api.py  display.py  logs.py  openproject.py  plane.py
