[tool.poetry]
name = "product-migration"
version = "0.2.0"
description = "Tool to migrate from OpenProject to Plane"
authors = ["TheDarkNine <thedarknine@proton.me>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"
httpx = "^0.28.0"
python-dotenv = "^1.0.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-httpx = "^0.35.0"
pytest-dotenv = "^0.5.2"
pylint = "^3.3.2"
black = "^24.10.0"
arrow = "^1.3.0"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
